# rbmq_pack

./: pyproject.toml
rbmqasync/: base_rbmq.py  client_server.py  rbmq.py  rpc_rbmq.py
rbmqasync/test/: consume.py  est_client.py  est_server.py  helpful.py  produse.py  t_отправитель.py  t_получатель.py  test.py  test_helpful.py  test_main.py
rbmqasync/test/devops/: Makefile  __env.env  docker-compose.yaml
rbmqasync/test/devops/postgres/: Dockerfile
rbmqsync/: base_rabbitmq.py  logic_massage.py
