[tool.poetry]
name = "rbmq_pack"
version = "0.1.0"
description = ""
authors = ["Denis Kustov"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^7.1.0"
logsmal = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
